# Auth-System

./: .gitignore  CLAUDE.md
.claude/commands/: create-spec.md  seed-users.md
.claude/plans/: login-and-logout.md  profile-page-design.md  registration.md
.claude/skills/frontend-design/: skill.md
.claude/skills/seed-users/: SKILL.md
.claude/specs/: 01-registration.md  02-login-and-logout.md  03-profile-page-design.md  04-send-email.md  05-admin-panel.md  06-user-delete-account.md
Backend/: note  pyproject.toml  sqlite.db
Backend/app/: email.py  main.py
Backend/app/account/: dependencies.py  models.py  routers.py  schemas.py  services.py  utils.py
Backend/app/db/: config.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/components/auth/: AuroraBackground.jsx  AuthLayout.jsx  Navbar.jsx
Frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx
Frontend/src/context/: AuthContext.jsx  ToastContext.jsx
Frontend/src/pages/: AdminPanel.jsx  ForgotPassword.jsx  Landing.jsx  Login.jsx  Profile.jsx  Register.jsx  ResetPassword.jsx  VerifyEmail.jsx
Frontend/src/services/: api.js  mockAuth.js  validators.js
